@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object name="portal_actions" meta_type="Plone Actions Tool"
+ xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <action-provider name="portal_actions">
+  <action title="Create Another Visualization" action_id="daviz.new" category="object_buttons"
+    url_expr="string:${object/absolute_url}/daviz-new.html"
+    visible="True"
+    condition="python:object.portal_type == 'DavizVisualization'">
+    <permission>Modify portal content</permission>
+  </action>
+ </action-provider>
+</object>
